# peoplesoft-mcp

./: .env.example  .gitignore  README.md  db.py  peoplesoft_server.py  pyproject.toml
.cursor/: peoplesoft-mcp.json
.cursor/agents/: peopletools-expert.md
.cursor/skills/peopletools-diagrams/: SKILL.md  examples.md
.cursor/skills/peopletools-mcp/: SKILL.md  reference.md
Reference_Documents/: key_tables.yaml  peoplesoft_concepts.md  peoplesoft_schema_guide.md  peopletools_guide.md  sql_query_examples.md  sql_query_examples.yaml
docs/: agent-driven-architecture.md  migration-analysis.md  peopletools-tables-by-tool.md
tests/: __init__.py  test_business_questions.py  test_peopletools_questions.py
tools/: __init__.py  benefits.py  hr.py  introspection.py  payroll.py  peopletools.py  performance.py
