[project]
name = "mcp-ps"
version = "0.2.0"
description = "PeopleSoft MCP Server - Query PeopleSoft HCM databases with semantic tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastmcp>=2.4.0",
    "mcp[cli]>=1.9.0",
    "oracledb>=3.1.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*", "tests*"]

[tool.setuptools]
py-modules = ["peoplesoft_server", "db"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
